chnagss to tictactoe

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 
 <head>
+	<div class="split left">
+		<div class="centered">
+		  <img src="img_avatar2.png" alt="Avatar woman">
+		  <h2>Jane Flex</h2>
+		  <p>Some text.</p>
+		</div>
+	  </div>
+	  
+	  <div class="split right">
+		<div class="centered">
+		  /*<img src="img_avatar.png" alt="Avatar man">
+		  <h2>John Doe</h2>
+		  <p>Some text here too.</p>
+		</div>
+	  </div>
 	<meta name="viewport" content=
 		"width=device-width, initial-scale=1.0">
 
@@ -14,13 +29,14 @@
 
 <body>
 	<div id="main">
-		<h1>TIC TAC TOE</h1>
+		<h1>LIGHTS OUT!</h1>
 
 		<!-- Game Instructions -->
-		<p id="ins">Game starts by just Tap on
-			box<br><br>First Player starts as
+		<p id="ins">Please answer the following questions.
+			<br><br>First Player starts as
 			<b>Player X</b><br>And<br>Second
 			Player as <b>Player 0</b>
+			<br><br> testing
 		</p>
 
 
